--- a/blog-details.html
+++ b/blog-details.html
@@ -52,9 +52,9 @@
                                 <li><a href="#">Harriet</a></li>
                             </ul>
                         </li>
-                        <li><a href="./schedule.html">Schedule</a></li>
+                        <!-- <li><a href="./schedule.html">Schedule</a></li> -->
                         <li class="active"><a href="./blog.html">Blog</a></li>
-                        <li><a href="./contact.html">Contacts</a></li>
+                        <!-- <li><a href="./contact.html">Contacts</a></li> -->
                     </ul>
                 </nav>
                 <a href="#" class="primary-btn top-btn"><i class="fa fa-ticket"></i> Ticket</a>
