--- a/contact.html
+++ b/contact.html
@@ -52,8 +52,8 @@
                                 <li><a href="#">Harriet</a></li>
                             </ul>
                         </li>
-                        <li><a href="./schedule.html">Schedule</a></li>
-                        <li><a href="./blog.html">Blog</a></li>
+                        <!-- <li><a href="./schedule.html">Schedule</a></li> -->
+                        <!-- <li><a href="./blog.html">Blog</a></li> -->
                         <li class="active"><a href="./contact.html">Contacts</a></li>
                     </ul>
                 </nav>
