--- a/speaker.html
+++ b/speaker.html
@@ -44,6 +44,7 @@
                     <ul>
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="./about-us.html">About</a></li>
+                        <li><a href="./pricing.html">Pricing</a>
                         <li class="active"><a href="./speaker.html">Speakers</a>
                             <ul class="dropdown">
                                 <li><a href="#">Jayden</a></li>
