--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Manup, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Manup | Template</title>
+    <title>HECA | 2024</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700,800,900&display=swap"
@@ -160,7 +160,7 @@
                 </div>
             </div>
         </div>
-        <div class="member-item set-bg" data-setbg="img/team-member/member-1.jpg" style="width: 20%;">
+        <div class="member-item set-bg" data-setbg="img/team-member/member-1.jpg">
             <div class="mi-social">
                 <div class="mi-social-inner bg-gradient">
                     <a href="#"><i class="fa fa-facebook"></i></a>
@@ -174,7 +174,7 @@
                 <span>Speaker</span>
             </div>
         </div>
-        <div class="member-item set-bg" data-setbg="img/team-member/member-3.jpg" style="width: 20%;">
+        <div class="member-item set-bg" data-setbg="img/team-member/member-3.jpg">
             <div class="mi-social">
                 <div class="mi-social-inner bg-gradient">
                     <a href="#"><i class="fa fa-facebook"></i></a>
@@ -188,7 +188,7 @@
                 <span>Speaker</span>
             </div>
         </div>
-        <div class="member-item set-bg" data-setbg="img/team-member/member-4.jpg" style="width: 20%;">
+        <div class="member-item set-bg" data-setbg="img/team-member/member-4.jpg">
             <div class="mi-social">
                 <div class="mi-social-inner bg-gradient">
                     <a href="#"><i class="fa fa-facebook"></i></a>
