Update the images

--- a/schedule.html
+++ b/schedule.html
@@ -46,15 +46,13 @@
                         <li><a href="./about-us.html">About</a></li>
                         <li><a href="./speaker.html">Speakers</a>
                             <ul class="dropdown">
-                                <li><a href="#">Jayden</a></li>
-                                <li><a href="#">Sara</a></li>
-                                <li><a href="#">Emma</a></li>
-                                <li><a href="#">Harriet</a></li>
+                                <li><a href="./speaker.html">Dr. Abiy Ahmed</a></li>
+                                <li><a href="./speaker.html">Dr. Abiot Sinamo</a></li>
                             </ul>
                         </li>
                         <li class="active"><a href="./schedule.html">Schedule</a></li>
                         <!-- <li><a href="./blog.html">Blog</a></li> -->
-                        <!-- <li><a href="./contact.html">Contacts</a></li> -->
+                        <li><a href="./contact.html">Contacts</a></li>
                     </ul>
                 </nav>
                 <a href="#" class="primary-btn top-btn"><i class="fa fa-ticket"></i> Ticket</a>
@@ -648,21 +646,21 @@
                     <div class="cs-text">
                         <div class="ct-address">
                             <span>Address:</span>
-                            <p>01 Pascale Springs Apt. 339, NY City <br />United State</p>
+                            <p>Bole Addis Ababa<br />Ethiopia</p>
                         </div>
                         <ul>
                             <li>
                                 <span>Phone:</span>
-                                (+12)-345-67-8910
+                                (+251)-945-67-8910
                             </li>
                             <li>
                                 <span>Email:</span>
-                                info.colorlib@gmail.com
+                                info@heca.com
                             </li>
                         </ul>
                         <div class="ct-links">
                             <span>Website:</span>
-                            <p>https://conference.colorlib.com</p>
+                            <p>https://techethio.com</p>
                         </div>
                     </div>
                 </div>
@@ -719,15 +717,15 @@
                         <div class="ft-logo">
                             <a href="#" class="footer-logo"><img src="img/footer-logo.png" alt=""></a>
                         </div>
-                        <ul>
+                        <!-- <ul>
                             <li><a href="#">Home</a></li>
                             <li><a href="#">Speakers</a></li>
                             <li><a href="#">Schedule</a></li>
                             <li><a href="#">Blog</a></li>
                             <li><a href="#">Contact</a></li>
-                        </ul>
+                        </ul> -->
                         <div class="copyright-text"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | <a href="https://techethio.com" target="_blank">TechEthio</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div>
                         <div class="ft-social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
