--- a/speaker.html
+++ b/speaker.html
@@ -44,18 +44,16 @@
                     <ul>
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="./about-us.html">About</a></li>
-                        <li><a href="./pricing.html">Pricing</a>
+
                         <li class="active"><a href="./speaker.html">Speakers</a>
                             <ul class="dropdown">
-                                <li><a href="#">Jayden</a></li>
-                                <li><a href="#">Sara</a></li>
-                                <li><a href="#">Emma</a></li>
-                                <li><a href="#">Harriet</a></li>
+                                <li><a href="./speaker.html">Dr. Abiy Ahmed</a></li>
+                                <li><a href="./speaker.html">Dr. Abiot Sinamo</a></li>
                             </ul>
                         </li>
                         <!-- <li><a href="./schedule.html">Schedule</a></li> -->
                         <!-- <li><a href="./blog.html">Blog</a></li> -->
-                        <!-- <li><a href="./contact.html">Contacts</a></li> -->
+                        <li><a href="./contact.html">Contacts</a></li>
                     </ul>
                 </nav>
                 <!-- <a href="#" class="primary-btn top-btn"><i class="fa fa-ticket"></i> Ticket</a> -->
@@ -98,7 +96,34 @@
                             <div class="col-lg-6">
                                 <div class="si-text">
                                     <div class="si-title">
-                                        <h4>Jayden Gill</h4>
+                                        <h4>Dr. Abiy Ahmed</h4>
+                                        <span>EFDRE PM</span>
+                                    </div>
+                                    <div class="si-social">
+                                        <a href="#"><i class="fa fa-facebook"></i></a>
+                                        <a href="#"><i class="fa fa-twitter"></i></a>
+                                        <a href="#"><i class="fa fa-google-plus"></i></a>
+                                    </div>
+                                    <p>Businesses often become known today through effective marketing. The marketing
+                                        may be in the form of a regular news item or half column society news in the
+                                        Sunday newspaper.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="speaker-item">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="si-pic">
+                                    <img src="img/speakers/speaker-4.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="si-text">
+                                    <div class="si-title">
+                                        <h4>Adanech Abebe</h4>
                                         <span>Speaker</span>
                                     </div>
                                     <div class="si-social">
@@ -125,8 +150,8 @@
                             <div class="col-lg-6">
                                 <div class="si-text">
                                     <div class="si-title">
-                                        <h4>Mary Jane</h4>
-                                        <span>Speaker</span>
+                                        <h4>Dr. Abiot Sinamo</h4>
+                                        <span>MINT CEO</span>
                                     </div>
                                     <div class="si-social">
                                         <a href="#"><i class="fa fa-facebook"></i></a>
@@ -152,35 +177,8 @@
                             <div class="col-lg-6">
                                 <div class="si-text">
                                     <div class="si-title">
-                                        <h4>Jack Human</h4>
+                                        <h4>Solomon Kassa</h4>
                                         <span>Manager</span>
-                                    </div>
-                                    <div class="si-social">
-                                        <a href="#"><i class="fa fa-facebook"></i></a>
-                                        <a href="#"><i class="fa fa-twitter"></i></a>
-                                        <a href="#"><i class="fa fa-google-plus"></i></a>
-                                    </div>
-                                    <p>Businesses often become known today through effective marketing. The marketing
-                                        may be in the form of a regular news item or half column society news in the
-                                        Sunday newspaper.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="speaker-item">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="si-pic">
-                                    <img src="img/speakers/speaker-4.jpg" alt="">
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="si-text">
-                                    <div class="si-title">
-                                        <h4>Sara Brudt</h4>
-                                        <span>Speaker</span>
                                     </div>
                                     <div class="si-social">
                                         <a href="#"><i class="fa fa-facebook"></i></a>
@@ -232,21 +230,21 @@
                     <div class="cs-text">
                         <div class="ct-address">
                             <span>Address:</span>
-                            <p>01 Pascale Springs Apt. 339, NY City <br />United State</p>
+                            <p>Bole Addis Ababa<br />Ethiopia</p>
                         </div>
                         <ul>
                             <li>
                                 <span>Phone:</span>
-                                (+12)-345-67-8910
+                                (+251)-945-67-8910
                             </li>
                             <li>
                                 <span>Email:</span>
-                                info.colorlib@gmail.com
+                                info@heca.com
                             </li>
                         </ul>
                         <div class="ct-links">
                             <span>Website:</span>
-                            <p>https://conference.colorlib.com</p>
+                            <p>https://techethio.com</p>
                         </div>
                     </div>
                 </div>
@@ -303,16 +301,21 @@
                         <div class="ft-logo">
                             <a href="#" class="footer-logo"><img src="img/footer-logo.png" alt=""></a>
                         </div>
-                        <ul>
+                        <!-- <ul>
                             <li><a href="#">Home</a></li>
                             <li><a href="#">Speakers</a></li>
                             <li><a href="#">Schedule</a></li>
                             <li><a href="#">Blog</a></li>
                             <li><a href="#">Contact</a></li>
-                        </ul>
-                        <div class="copyright-text"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div>
+                        </ul> -->
+                        <div class="copyright-text">
+                            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                                Copyright &copy;
+                                <script>document.write(new Date().getFullYear());</script> All rights reserved | <a
+                                    href="https://techethio.com" target="_blank">TechEthio</a>
+                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            </p>
+                        </div>
                         <div class="ft-social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
                             <a href="#"><i class="fa fa-twitter"></i></a>
