--- a/about-us.html
+++ b/about-us.html
@@ -44,7 +44,7 @@
                     <ul>
                         <li><a href="./index.html">Home</a></li>
                         <li class="active"><a href="./about-us.html">About</a></li>
-                        <li><a href="./pricing.html">Pricing</a>
+                        
                         <li><a href="./speaker.html">Speakers</a>
                             <ul class="dropdown">
                                 <li><a href="./speaker.html">Dr. Abiy Ahmed</a></li>
@@ -53,7 +53,7 @@
                         </li>
                         <!-- <li><a href="./schedule.html">Schedule</a></li> -->
                         <!-- <li><a href="./blog.html">Blog</a></li> -->
-                        <!-- <li><a href="./contact.html">Contacts</a></li> -->
+                        <li><a href="./contact.html">Contacts</a></li>
                     </ul>
                 </nav>
                 <!-- <a href="#" class="primary-btn top-btn"><i class="fa fa-ticket"></i> Ticket</a> -->
@@ -126,49 +126,6 @@
         </div>
     </section>
     <!-- About Section End -->
-
-    <!-- Team Member Section Begin -->
-    <section class="team-member-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="section-title">
-                        <h2>Who’s speaking</h2>
-                        <p>These are our communicators, you can see each person information</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="member-item set-bg" data-setbg="img/team-member/member-2.jpg">
-            <div class="mi-social">
-                <div class="mi-social-inner bg-gradient">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                    <a href="#"><i class="fa fa-instagram"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                    <a href="#"><i class="fa fa-linkedin"></i></a>
-                </div>
-            </div>
-            <div class="mi-text">
-                <h5>Emma Sandoval</h5>
-                <span>Speaker</span>
-            </div>
-        </div>
-        <div class="member-item set-bg" data-setbg="img/team-member/member-3.jpg">
-            <div class="mi-social">
-                <div class="mi-social-inner bg-gradient">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                    <a href="#"><i class="fa fa-instagram"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                    <a href="#"><i class="fa fa-linkedin"></i></a>
-                </div>
-            </div>
-            <div class="mi-text">
-                <h5>Emma Sandoval</h5>
-                <span>Speaker</span>
-            </div>
-        </div>
-    </section>
-    <!-- Team Member Section End -->
 
     <!-- Story Section Begin -->
     <section class="story-section spad">
@@ -338,21 +295,21 @@
                     <div class="cs-text">
                         <div class="ct-address">
                             <span>Address:</span>
-                            <p>01 Pascale Springs Apt. 339, NY City <br />United State</p>
+                            <p>Bole Addis Ababa<br />Ethiopia</p>
                         </div>
                         <ul>
                             <li>
                                 <span>Phone:</span>
-                                (+12)-345-67-8910
+                                (+251)-945-67-8910
                             </li>
                             <li>
                                 <span>Email:</span>
-                                info.colorlib@gmail.com
+                                info@heca.com
                             </li>
                         </ul>
                         <div class="ct-links">
                             <span>Website:</span>
-                            <p>https://conference.colorlib.com</p>
+                            <p>https://techethio.com</p>
                         </div>
                     </div>
                 </div>
@@ -409,22 +366,16 @@
                         <div class="ft-logo">
                             <a href="#" class="footer-logo"><img src="img/footer-logo.png" alt=""></a>
                         </div>
-                        <ul>
+                        <!-- <ul>
                             <li><a href="#">Home</a></li>
                             <li><a href="#">Speakers</a></li>
                             <li><a href="#">Schedule</a></li>
                             <li><a href="#">Blog</a></li>
                             <li><a href="#">Contact</a></li>
-                        </ul>
-                        <div class="copyright-text">
-                            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                Copyright &copy;
-                                <script>document.write(new Date().getFullYear());</script> All rights reserved | This
-                                template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a
-                                    href="https://colorlib.com" target="_blank">Colorlib</a>
-                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            </p>
-                        </div>
+                        </ul> -->
+                        <div class="copyright-text"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | <a href="https://techethio.com" target="_blank">TechEthio</a>
+  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div>
                         <div class="ft-social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
                             <a href="#"><i class="fa fa-twitter"></i></a>
