--- a/blog-details.html
+++ b/blog-details.html
@@ -44,7 +44,7 @@
                     <ul>
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="./about-us.html">About</a></li>
-                        <li><a href="./pricing.html">Pricing</a>
+                        
                             <li><a href="./speaker.html">Speakers</a>
                                 <ul class="dropdown">
                                     <li><a href="./speaker.html">Dr. Abiy Ahmed</a></li>
@@ -275,15 +275,15 @@
                         <div class="ft-logo">
                             <a href="#" class="footer-logo"><img src="img/footer-logo.png" alt=""></a>
                         </div>
-                        <ul>
+                        <!-- <ul>
                             <li><a href="#">Home</a></li>
                             <li><a href="#">Speakers</a></li>
                             <li><a href="#">Schedule</a></li>
                             <li><a href="#">Blog</a></li>
                             <li><a href="#">Contact</a></li>
-                        </ul>
+                        </ul> -->
                         <div class="copyright-text"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | <a href="https://techethio.com" target="_blank">TechEthio</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div>
                         <div class="ft-social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
