--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <div class="logo">
                 <a href="./index.html">
                     <img src="img/logo.png" alt="">
+                    <!-- <h3 style="font-family: 'Times New Roman', Times, serif;">HECA</h3> -->
                 </a>
             </div>
             <div class="nav-menu">
@@ -73,9 +74,6 @@
                         <h2>Change Your Mind<br /> To Become Sucess</h2>
                         <a href="#" class="primary-btn">Register Now</a>
                     </div>
-                </div>
-                <div class="col-lg-5">
-                    <img src="img/hero-right.png" alt="">
                 </div>
             </div>
         </div>
