Mike comment added

--- a/about-us.html
+++ b/about-us.html
@@ -49,6 +49,8 @@
                             <ul class="dropdown">
                                 <li><a href="./speaker.html">Dr. Abiy Ahmed</a></li>
                                 <li><a href="./speaker.html">Dr. Abiot Sinamo</a></li>
+                                <li><a href="./speaker.html">Dr. Eleni Gabre-Madhin</a></li>
+                                <li><a href="./speaker.html">Solomon Kassa</a></li>
                             </ul>
                         </li>
                         <!-- <li><a href="./schedule.html">Schedule</a></li> -->
@@ -186,86 +188,6 @@
     </section>
     <!-- Story Section End -->
 
-    <!-- Testimonial Section Begin -->
-    <section class="testimonial-section spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="section-title">
-                        <h2>Testimonials</h2>
-                        <p>Our customers are our biggest supporters. What do they think of us?</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="row">
-                        <div class="testimonial-slider owl-carousel">
-                            <div class="col-lg-6">
-                                <div class="testimonial-item">
-                                    <div class="ti-author">
-                                        <div class="quote-pic">
-                                            <img src="img/quote.png" alt="">
-                                        </div>
-                                        <div class="ta-pic">
-                                            <img src="img/testimonial/testimonial-1.jpg" alt="">
-                                        </div>
-                                        <div class="ta-text">
-                                            <h5>Emma Sandoval</h5>
-                                            <span>Speaker Manager</span>
-                                        </div>
-                                    </div>
-                                    <p>“First impression is made by logo or its absence. To know the importance of a
-                                        logo just answer one question: How many big, leading and famous companies don’t
-                                        have logos?”</p>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="testimonial-item">
-                                    <div class="ti-author">
-                                        <div class="quote-pic">
-                                            <img src="img/quote.png" alt="">
-                                        </div>
-                                        <div class="ta-pic">
-                                            <img src="img/testimonial/testimonial-2.jpg" alt="">
-                                        </div>
-                                        <div class="ta-text">
-                                            <h5>John Smith</h5>
-                                            <span>Speaker Manager</span>
-                                        </div>
-                                    </div>
-                                    <p>“There is no denying the fact that the success of an advertisement lies mostly in
-                                        the headline. The headline should attract the reader and make him read the rest
-                                        of the advertisement.”</p>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="testimonial-item">
-                                    <div class="ti-author">
-                                        <div class="quote-pic">
-                                            <img src="img/quote.png" alt="">
-                                        </div>
-                                        <div class="ta-pic">
-                                            <img src="img/testimonial/testimonial-2.jpg" alt="">
-                                        </div>
-                                        <div class="ta-text">
-                                            <h5>John Smith</h5>
-                                            <span>Speaker Manager</span>
-                                        </div>
-                                    </div>
-                                    <p>“There is no denying the fact that the success of an advertisement lies mostly in
-                                        the headline. The headline should attract the reader and make him read the rest
-                                        of the advertisement.”</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Testimonial Section End -->
-
     <!-- Newslatter Section Begin -->
     <section class="newslatter-section about-newslatter">
         <div class="container">
@@ -314,9 +236,8 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div class="cs-map">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52901.38789495531!2d-118.19465514866786!3d34.03523211493029!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2cf71ad83ff9f%3A0x518b28657f4543b7!2sEast%20Los%20Angeles%2C%20CA%2C%20USA!5e0!3m2!1sen!2sbd!4v1579763856144!5m2!1sen!2sbd"
+                    <div class="cs-map"><iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.056267600396!2d38.76054691472543!3d9.022233093420393!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x164b843e35a0669d%3A0x214d553e46c229b0!2sNational%20Museum%20of%20Ethiopia!5e0!3m2!1sen!2set!4v1646802540558!5m2!1sen!2set"
                             height="400" style="border:0;" allowfullscreen=""></iframe>
                     </div>
                 </div>
