--- a/blog.html
+++ b/blog.html
@@ -48,6 +48,8 @@
                             <ul class="dropdown">
                                 <li><a href="./speaker.html">Dr. Abiy Ahmed</a></li>
                                 <li><a href="./speaker.html">Dr. Abiot Sinamo</a></li>
+                                <li><a href="./speaker.html">Dr. Eleni Gabre-Madhin</a></li>
+                                <li><a href="./speaker.html">Solomon Kassa</a></li>
                             </ul>
                         </li>
                         <!-- <li><a href="./schedule.html">Schedule</a></li> -->
