--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,8 @@
                             <ul class="dropdown">
                                 <li><a href="./speaker.html">Dr. Abiy Ahmed</a></li>
                                 <li><a href="./speaker.html">Dr. Abiot Sinamo</a></li>
+                                <li><a href="./speaker.html">Dr. Eleni Gabre-Madhin</a></li>
+                                <li><a href="./speaker.html">Solomon Kassa</a></li>
                             </ul>
                         </li>
                         <!-- <li><a href="./schedule.html">Schedule</a></li> -->
@@ -101,13 +103,13 @@
                 <div class="col-lg-6">
                     <div class="cc-map">
                         <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105718.20476932525!2d-118.28504975143346!3d34.10298127166687!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c6badc8521ad%3A0x7ad323479ca23922!2sNortheast%20Los%20Angeles%2C%20Los%20Angeles%2C%20CA%2C%20USA!5e0!3m2!1sen!2sbd!4v1579884986183!5m2!1sen!2sbd"
-                            height="580" style="border:0;" allowfullscreen=""></iframe>
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.056267600396!2d38.76054691472543!3d9.022233093420393!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x164b843e35a0669d%3A0x214d553e46c229b0!2sNational%20Museum%20of%20Ethiopia!5e0!3m2!1sen!2set!4v1646802540558!5m2!1sen!2set"
+                            height="600" style="border:0;" allowfullscreen=""></iframe>
                         <div class="map-hover">
                             <i class="fa fa-map-marker"></i>
                             <div class="map-hover-inner">
-                                <h5>01 Pascale SP Apt. 339</h5>
-                                <p>NewYork City, US</p>
+                                <h5>Ethiopian Science Museum</h5>
+                                <p>Addis Ababa, Ethiopia</p>
                             </div>
                         </div>
                     </div>
