--- a/exhibitor.html
+++ b/exhibitor.html
@@ -31,39 +31,12 @@
         <div class="loader"></div>
     </div>
 
-    <!-- Header Section Begin -->
-    <header class="header-section">
-        <div class="container">
-            <div class="logo">
-                <a href="./index.html">
-                    <img src="img/logo.png" alt="">
-                </a>
-            </div>
-            <div class="nav-menu">
-                <nav class="mainmenu mobile-menu">
-                    <ul>
-                        <li class="active"><a href="./index.html">Home</a></li>
-                        <li><a href="./about-us.html">About</a></li>
-                        
-                        <li><a href="./speaker.html">Speakers</a>
-                            <ul class="dropdown">
-                                <li><a href="./speaker.html">Dr. Abiy Ahmed</a></li>
-                                <li><a href="./speaker.html">Dr. Abiot Sinamo</a></li>
-                                <li><a href="./speaker.html">Dr. Eleni Gabre-Madhin</a></li>
-                                <li><a href="./speaker.html">Solomon Kassa</a></li>
-                            </ul>
-                        </li>
-                        <!-- <li><a href="./schedule.html">Schedule</a></li> -->
-                        <!-- <li><a href="./blog.html">Blog</a></li> -->
-                        <!-- <li><a href="./contact.html">Contacts</a></li> -->
-                    </ul>
-                </nav>
-                <!-- <a href="#" class="primary-btn top-btn"><i class="fa fa-ticket"></i> Ticket</a> -->
-            </div>
-            <div id="mobile-menu-wrap"></div>
-        </div>
-    </header>
-    <!-- Header End -->
+    <!-- <div class="container"> -->
+        <iframe
+            src="https://docs.google.com/forms/d/e/1FAIpQLSeTz4pwINN_sdGC7ZbZ65EsjCmNima6YwwtVBn2hQ8C77Ygkw/viewform?embedded=true"
+            width="100%" height="2050">Loading…</iframe>
+    <!-- </div> -->
+    <!-- Footer Section End -->
 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
