--- a/speaker.html
+++ b/speaker.html
@@ -49,6 +49,8 @@
                             <ul class="dropdown">
                                 <li><a href="./speaker.html">Dr. Abiy Ahmed</a></li>
                                 <li><a href="./speaker.html">Dr. Abiot Sinamo</a></li>
+                                <li><a href="./speaker.html">Dr. Eleni Gabre-Madhin</a></li>
+                                <li><a href="./speaker.html">Solomon Kassa</a></li>
                             </ul>
                         </li>
                         <!-- <li><a href="./schedule.html">Schedule</a></li> -->
@@ -117,14 +119,14 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="si-pic">
-                                    <img src="img/speakers/speaker-4.jpg" alt="">
+                                    <img src="img/speakers/speaker-2.jpg" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="si-text">
                                     <div class="si-title">
-                                        <h4>Adanech Abebe</h4>
-                                        <span>Speaker</span>
+                                        <h4>Dr. Abiot Sinamo</h4>
+                                        <span>MINT CEO</span>
                                     </div>
                                     <div class="si-social">
                                         <a href="#"><i class="fa fa-facebook"></i></a>
@@ -144,14 +146,14 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="si-pic">
-                                    <img src="img/speakers/speaker-2.jpg" alt="">
+                                    <img src="img/team-member/member-5.jpg" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="si-text">
                                     <div class="si-title">
-                                        <h4>Dr. Abiot Sinamo</h4>
-                                        <span>MINT CEO</span>
+                                        <h4>Dr. Eleni Gabre-Madhin</h4>
+                                        <span>Founder of BlueMoon Ethiopia</span>
                                     </div>
                                     <div class="si-social">
                                         <a href="#"><i class="fa fa-facebook"></i></a>
@@ -249,9 +251,8 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div class="cs-map">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52901.38789495531!2d-118.19465514866786!3d34.03523211493029!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2cf71ad83ff9f%3A0x518b28657f4543b7!2sEast%20Los%20Angeles%2C%20CA%2C%20USA!5e0!3m2!1sen!2sbd!4v1579763856144!5m2!1sen!2sbd"
+                    <div class="cs-map"><iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.056267600396!2d38.76054691472543!3d9.022233093420393!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x164b843e35a0669d%3A0x214d553e46c229b0!2sNational%20Museum%20of%20Ethiopia!5e0!3m2!1sen!2set!4v1646802540558!5m2!1sen!2set"
                             height="400" style="border:0;" allowfullscreen=""></iframe>
                     </div>
                 </div>
