--- a/blog.html
+++ b/blog.html
@@ -43,6 +43,7 @@
                 <nav class="mainmenu mobile-menu">
                     <ul>
                         <li><a href="./index.html">Home</a></li>
+                        <li><a href="#">Sponsors</a></li>
                         <li><a href="./about-us.html">About</a></li>
                         <li><a href="./speaker.html">Speakers</a>
                             <ul class="dropdown">
