--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,6 @@
                 <nav class="mainmenu mobile-menu">
                     <ul>
                         <li><a href="./index.html">Home</a></li>
-                        <li><a href="./about-us.html">About</a></li>
                         <li><a href="./speaker.html">Speakers</a>
                             <ul class="dropdown">
                                 <li><a href="./speaker.html">Dr. Abiy Ahmed</a></li>
@@ -52,8 +51,12 @@
                                 <li><a href="./speaker.html">Solomon Kassa</a></li>
                             </ul>
                         </li>
-                        <!-- <li><a href="./schedule.html">Schedule</a></li> -->
+                        <li><a href="./schedule.html">Schedule</a></li>
                         <!-- <li><a href="./blog.html">Blog</a></li> -->
+                        <!-- <li><a href="#">Schedule</a></li> -->
+                        <li><a href="#">Exhibitor</a></li>
+                        <li><a href="#">Sponsors</a></li>
+                        <li><a href="./about-us.html">About</a></li>
                         <li class="active"><a href="./contact.html">Contacts</a></li>
                     </ul>
                 </nav>
