--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
                 <nav class="mainmenu mobile-menu">
                     <ul>
                         <li class="active"><a href="./index.html">Home</a></li>
-                        <li><a href="./about-us.html">About</a></li>
 
                         <li><a href="./speaker.html">Speakers</a>
                             <ul class="dropdown">
@@ -54,8 +53,10 @@
                                 <li><a href="./speaker.html">Solomon Kassa</a></li>
                             </ul>
                         </li>
-                        <!-- <li><a href="./schedule.html">Schedule</a></li> -->
-                        <!-- <li><a href="./blog.html">Blog</a></li> -->
+                        <li><a href="./schedule.html">Schedule</a></li>
+                        <li><a href="#">Exhibitor</a></li>
+                        <li><a href="#">Sponsors</a></li>
+                        <li><a href="./about-us.html">About</a></li>
                         <li><a href="./contact.html">Contacts</a></li>
                     </ul>
                 </nav>
@@ -70,10 +71,10 @@
     <section class="hero-section set-bg" data-setbg="img/hero.jpg">
         <div class="container">
             <div class="row">
-                <div class="col-lg-7">
+                <div class="col-lg-9">
                     <div class="hero-text">
                         <span>12 to 19 may 2024, Addis Ababa, Ethiopia</span>
-                        <h2>The Road To Success</h2>
+                        <h2>Elevating Ethiopia Digitally</h2>
                         <a href="./exhibitor.html" target="_blank" class="primary-btn">Register Now</a>
                     </div>
                 </div>
