--- a/pricing.html
+++ b/pricing.html
@@ -42,6 +42,7 @@
                 <nav class="mainmenu mobile-menu">
                     <ul>
                         <li><a href="./index.html">Home</a></li>
+                        <li><a href="#">Sponsors</a></li>
                         <li><a href="./about-us.html">About</a></li>
                         <li class="active"><a href="./pricing.html">Pricing</a>
                             <li><a href="./speaker.html">Speakers</a>
