--- a/schedule.html
+++ b/schedule.html
@@ -43,7 +43,6 @@
                 <nav class="mainmenu mobile-menu">
                     <ul>
                         <li><a href="./index.html">Home</a></li>
-                        <li><a href="./about-us.html">About</a></li>
                         <li><a href="./speaker.html">Speakers</a>
                             <ul class="dropdown">
                                 <li><a href="./speaker.html">Dr. Abiy Ahmed</a></li>
@@ -54,10 +53,13 @@
                         </li>
                         <li class="active"><a href="./schedule.html">Schedule</a></li>
                         <!-- <li><a href="./blog.html">Blog</a></li> -->
+                        <li><a href="#">Exhibitor</a></li>
+                        <li><a href="#">Sponsors</a></li>
+                        <li><a href="./about-us.html">About</a></li>
                         <li><a href="./contact.html">Contacts</a></li>
                     </ul>
                 </nav>
-                <a href="#" class="primary-btn top-btn"><i class="fa fa-ticket"></i> Ticket</a>
+                <!-- <a href="#" class="primary-btn top-btn"><i class="fa fa-ticket"></i> Ticket</a> -->
             </div>
             <div id="mobile-menu-wrap"></div>
         </div>
