--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,8 @@
                                 <li><a href="./speaker.html">Solomon Kassa</a></li>
                             </ul>
                         </li>
-                        <li><a href="./schedule.html">Schedule</a></li>
+                        
+                        <li><a href="./schedule.html">Agenda</a></li>
                         <!-- <li><a href="./blog.html">Blog</a></li> -->
                         <!-- <li><a href="#">Schedule</a></li> -->
                         <li><a href="#">Exhibitor</a></li>
