--- a/schedule.html
+++ b/schedule.html
@@ -51,7 +51,7 @@
                                 <li><a href="./speaker.html">Solomon Kassa</a></li>
                             </ul>
                         </li>
-                        <li class="active"><a href="./schedule.html">Schedule</a></li>
+                        <li class="active"><a href="./schedule.html">Agenda</a></li>
                         <!-- <li><a href="./blog.html">Blog</a></li> -->
                         <li><a href="#">Exhibitor</a></li>
                         <li><a href="#">Sponsors</a></li>
