--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                                 <li><a href="./speaker.html">Solomon Kassa</a></li>
                             </ul>
                         </li>
-                        <li><a href="./schedule.html">Schedule</a></li>
+                        
+                        <li><a href="./schedule.html">Agenda</a></li>
                         <li><a href="#">Exhibitor</a></li>
                         <li><a href="#">Sponsors</a></li>
                         <li><a href="./about-us.html">About</a></li>
