--- a/speaker.html
+++ b/speaker.html
@@ -54,7 +54,8 @@
                         </li>
                         <!-- <li><a href="./schedule.html">Schedule</a></li> -->
                         <!-- <li><a href="./blog.html">Blog</a></li> -->
-                        <li><a href="./schedule.html">Schedule</a></li>
+                        
+                        <li><a href="./schedule.html">Agenda</a></li>
                         <li><a href="#">Exhibitor</a></li>
                         <li><a href="#">Sponsors</a></li>
                         <li><a href="./about-us.html">About</a></li>
