--- a/pricing.html
+++ b/pricing.html
@@ -48,7 +48,7 @@
                             <li><a href="./speaker.html">Speakers</a>
                                 <ul class="dropdown">
                                     <li><a href="./speaker.html">Dr. Abiy Ahmed</a></li>
-                                    <li><a href="./speaker.html">Dr. Abiot Sinamo</a></li>
+                                    <li><a href="./speaker.html">Dr. Belete Molla</a></li>
                                 </ul>
                             </li>
                         <!-- <li><a href="./schedule.html">Schedule</a></li> -->
