--- a/about-us.html
+++ b/about-us.html
@@ -47,7 +47,7 @@
                         <li><a href="./speaker.html">Speakers</a>
                             <ul class="dropdown">
                                 <li><a href="./speaker.html">Dr. Abiy Ahmed</a></li>
-                                <li><a href="./speaker.html">Dr. Abiot Sinamo</a></li>
+                                <li><a href="./speaker.html">Dr. Belete Molla</a></li>
                                 <li><a href="./speaker.html">Dr. Eleni Gabre-Madhin</a></li>
                                 <li><a href="./speaker.html">Solomon Kassa</a></li>
                             </ul>
