--- a/speaker.html
+++ b/speaker.html
@@ -47,7 +47,7 @@
                         <li class="active"><a href="./speaker.html">Speakers</a>
                             <ul class="dropdown">
                                 <li><a href="./speaker.html">Dr. Abiy Ahmed</a></li>
-                                <li><a href="./speaker.html">Dr. Abiot Sinamo</a></li>
+                                <li><a href="./speaker.html">Dr. Belete Molla</a></li>
                                 <li><a href="./speaker.html">Dr. Eleni Gabre-Madhin</a></li>
                                 <li><a href="./speaker.html">Solomon Kassa</a></li>
                             </ul>
@@ -129,7 +129,7 @@
                             <div class="col-lg-6">
                                 <div class="si-text">
                                     <div class="si-title">
-                                        <h4>Dr. Abiot Sinamo</h4>
+                                        <h4>Dr. Belete Molla</h4>
                                         <span>MINT CEO</span>
                                     </div>
                                     <div class="si-social">
